RESOLVED FIXED254911
GraphicsContextGLCocoa does not signal context loss immediately on failed prepare
https://bugs.webkit.org/show_bug.cgi?id=254911
Summary GraphicsContextGLCocoa does not signal context loss immediately on failed pre...
Kimmo Kinnunen
Reported 2023-04-03 04:31:30 PDT
GraphicsContextGLCocoa does not signal context loss immediately on failed prepare
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-03 04:31:58 PDT
Kimmo Kinnunen
Comment 2 2023-04-03 04:45:38 PDT
EWS
Comment 3 2023-04-23 23:56:06 PDT
Committed 263297@main (a2684c1fef12): <https://commits.webkit.org/263297@main> Reviewed commits have been landed. Closing PR #12313 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.