GraphicsContextGLCocoa does not signal context loss immediately on failed prepare https://bugs.webkit.org/show_bug.cgi?id=254911 rdar://problem/107553596

Reviewed by Dean Jackson.

Previously, if a new surface could not be allocated during prepare for display,
the error would be signalled on the next context call during makeContextCurrent().

This had the problem that makeContextCurrent() would need to check for
m_displayBufferPbuffer existence. This is a problem since the m_displayBufferPbuffer is
a Cocoa specific variable but preferably makeContextCurrent() would be using only
the GraphicsContextGLANGLE state. This prevents Cocoa specific state from being
declared in GraphicsContextGLCocoa.h.

This also had the problem that makeContextCurrent() should work even if the
display buffer is not allocated. This would be used during construction and
destruction.

Make the code structure less error-prone by signaling the context loss during
prepare, and let the makeContextCurrent() always be able to make the context
current.

This is work towards being able to move the Cocoa specific state to the
Cocoa class.

* Source/WebCore/platform/graphics/GraphicsContextGLEnums.h:
* Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLANGLE::simulateEventForTesting):
* Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::GraphicsContextGLCocoa::allocateAndBindDisplayBufferBacking):
* Tools/TestWebKitAPI/Tests/WebCore/cocoa/TestGraphicsContextGLCocoa.mm:
(TestWebKitAPI::TEST_P):
(TestWebKitAPI::createDefaultTestContext): Deleted.

Canonical link: https://commits.webkit.org/263297@main